# dimos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  NEWREADME.MD  README.md  flake.nix  largefiles.sh  memory.txt  mkdocs.yml  pyproject.toml  requirements.txt  test_command.py  test_minimal.py  test_subscribe.py  uv.lock.REMOVED.git-id
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: _docker-build-template.yml  ci.yml  code-cleanup.yml  docker-build.yml  docker.yml  fast-docs.yml  fast-test.yml  tests.yml
assets/agent/: prompt.txt
autoresearch/: .gitignore  optimizations.py  results.txt
autoresearch/_patches/: sitecustomize.py
autoresearch/results/: run_20260414_020906.json  run_20260414_023440.json  run_20260414_024537.json  run_20260414_025152.json  run_20260414_025744.json  run_20260414_030309.json  run_20260414_030826.json  run_20260414_031342.json  run_20260414_031901.json  run_20260414_032428.json  run_20260414_032945.json  run_20260414_033503.json  run_20260414_034023.json  run_20260414_034543.json  (+89 more)
dimos/: __init__.py  api.py  conftest.py
dimos/core/: core.py  (+32 more)
docs/: VIEWER_BACKENDS.md  development.md  hooks.py  install_and_setup.md  modules_readme.md  package_usage.md  running_without_devcontainer.md
docs_for_bots/: hardware_contributing.md
installer/: installer.pyz.REMOVED.git-id  requirements.txt
installer_support/: dimos_banner.js  get_tool_check_results.ts  main.js
tests/: agent_manip_flow_fastapi_test.py  agent_manip_flow_flask_test.py  agent_memory_test.py  run.py  run_go2_ros.py  run_manipulation_planner_loop.py  run_navigation_only.py  simple_agent_test.py  test_agent.py  test_agent_alibaba.py  test_agent_ctransformers_gguf.py  test_agent_huggingface_local.py  test_agent_huggingface_local_jetson.py  test_agent_huggingface_remote.py  test_ardupilot.py  test_audio_agent.py  test_cerebras_unitree_ros.py  test_claude_agent_query.py  test_claude_agent_skills_query.py  test_command_pose_unitree.py  test_ctransformers_gguf_agent.py  test_grasp_planner_demo.py  test_grasp_planner_pybullet_sim.py  test_huggingface_llm_agent.py  test_image_backends.py  test_manipulation_agent.py  test_manipulation_perception_pipeline.py.py  test_manipulation_pipeline_single_frame.py  test_manipulation_pipeline_single_frame_lcm.py  test_move_vel_unitree.py  test_navigate_to_object_robot.py  test_navigation_skills.py  test_object_detection_agent_data_query_stream.py  test_object_detection_stream.py  test_object_tracking_module.py  test_object_tracking_webcam.py  test_object_tracking_with_qwen.py  test_observe_stream_skill.py  test_person_following_robot.py  test_person_following_webcam.py  (+33 more)
(+1173 files in other folders)
