[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dimos"
version = "0.1.0"
description = "A fork of dimensionalOS/dimos — dimensional operating system utilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "dimos contributors" },
]
keywords = ["robotics", "agents", "llm", "ros", "dimensional"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "requests>=2.31",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.9",
    "reactivex>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
    "pre-commit>=3.5",
]
ros = [
    "rclpy",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.20",
    "langchain>=0.1",
]
all = [
    "dimos[dev,llm]",
]

[project.scripts]
dimos = "dimos.cli:app"

[project.urls]
# Personal fork — upstream is dimensionalOS/dimos
Homepage = "https://github.com/dimensionalOS/dimos"
Repository = "https://github.com/dimensionalOS/dimos"
Issues = "https://github.com/dimensionalOS/dimos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dimos*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dimos"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# removed --cov flags so a plain `pytest` run doesn't require pytest-cov installed
# -s shows print() output during test runs, useful when exploring the codebase
# --tb=short keeps tracebacks readable without being overwhelming
# --no-header reduces noise in output when running tests frequently during development
addopts = "-v -s --tb=short --no-header"

[tool.coverage.run]
source = ["dimos"]
omit = ["tests/*", "*/__init__.py"]
